RTL support for bootswatch was added